Fixes inline dropdown dropdown icon alignment, fixes menu item using relative sizes

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -691,7 +691,7 @@ select.ui.dropdown {
 }
 .ui.inline.dropdown .dropdown.icon {
   margin: @inlineIconMargin;
-  vertical-align: top;
+  vertical-align: baseline;
 }
 .ui.inline.dropdown > .text {
   font-weight: @inlineTextFontWeight;
